fix borders not showing on comps

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@
 [data-slot="dialog-content"] {
   border-color: var(--border);
 }
-
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -50,10 +49,6 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  --base-100: oklch(1 0 0);
-  --base-200: oklch(0.97 0 0);
-  --neutral: oklch(0.45 0 0);
-  --neutral-content: oklch(0.985 0 0);
   --font-sans:
     ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -62,7 +57,7 @@
   --font-mono:
     ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
     "Courier New", monospace;
-  --radius: 1.5rem;
+  --radius: 1.25rem;
   --shadow-x: 0;
   --shadow-y: 1px;
   --shadow-blur: 3px;
@@ -118,10 +113,6 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(0.275 0 0);
   --sidebar-ring: oklch(0.439 0 0);
-  --base-100: oklch(0.205 0 0);
-  --base-200: oklch(0.145 0 0);
-  --neutral: oklch(0.6 0 0);
-  --neutral-content: oklch(0.145 0 0);
   --font-sans:
     ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -130,7 +121,7 @@
   --font-mono:
     ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
     "Courier New", monospace;
-  --radius: 1.5rem;
+  --radius: 1.25rem;
   --shadow-x: 0;
   --shadow-y: 1px;
   --shadow-blur: 3px;
@@ -184,10 +175,6 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --color-base-100: var(--base-100);
-  --color-base-200: var(--base-200);
-  --color-neutral: var(--neutral);
-  --color-neutral-content: var(--neutral-content);
 
   --font-sans: var(--font-sans);
   --font-mono: var(--font-mono);
